--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
 		"@fontsource/fira-mono": "^4.5.0",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/adapter-netlify": "^1.0.0-next.81",
 		"@sveltejs/adapter-node": "^1.0.0-next.98",
-		"@sveltejs/kit": "next",
+		"@sveltejs/kit": "^1.0.0-next.516",
 		"autoprefixer": "^10.4.12",
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
