--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.46.0",
 		"svelte-preprocess": "^4.10.7",
+		"svelte-reveal": "^0.6.0",
 		"tailwindcss": "^3.1.8",
 		"vite": "^3.1.0"
 	},
