--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "front-end",
 	"version": "0.0.1",
 	"scripts": {
+		"gh-pages": "npm run build && npx gh-pages -d build",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -9,29 +10,31 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@fontsource/fira-mono": "^4.5.0",
+		"@fontsource/fira-mono": "^5.0.8",
 		"@neoconfetti/svelte": "^1.0.0",
 		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-netlify": "^1.0.0-next.81",
-		"@sveltejs/adapter-node": "^1.0.0-next.98",
-		"@sveltejs/kit": "^1.0.0-next.516",
-		"autoprefixer": "^10.4.12",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
+		"@sveltejs/adapter-netlify": "^2.0.8",
+		"@sveltejs/adapter-node": "^1.3.1",
+		"@sveltejs/adapter-static": "^2.0.3",
+		"@sveltejs/kit": "^1.23.0",
+		"autoprefixer": "^10.4.15",
+		"eslint": "^8.47.0",
+		"eslint-config-prettier": "^9.0.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.17",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.46.0",
-		"svelte-preprocess": "^4.10.7",
-		"svelte-reveal": "^0.6.0",
-		"tailwindcss": "^3.1.8",
-		"vite": "^3.1.0"
+		"gh-pages": "^6.0.0",
+		"postcss": "^8.4.28",
+		"prettier": "^3.0.2",
+		"prettier-plugin-svelte": "^3.0.3",
+		"svelte": "^4.2.0",
+		"svelte-preprocess": "^5.0.4",
+		"svelte-reveal": "^0.7.0",
+		"tailwindcss": "^3.3.3",
+		"vite": "^4.4.9"
 	},
 	"type": "module",
 	"dependencies": {
-		"@fortawesome/free-brands-svg-icons": "^6.2.0",
-		"@fortawesome/free-solid-svg-icons": "^6.2.0",
-		"svelte-fa": "^3.0.3"
+		"@fortawesome/free-brands-svg-icons": "^6.4.2",
+		"@fortawesome/free-solid-svg-icons": "^6.4.2",
+		"svelte-fa": "^3.0.4"
 	}
 }
