--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,7 @@ jobs:
         with:
           node-version: 16
           cache: 'npm'
+      - run: npm config set legacy-peer-deps true
       - run: npm ci
       - run: npm run gh-pages
       - name: Upload artifact
