--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,7 @@ jobs:
           cache: 'npm'
       - run: npm config set legacy-peer-deps true
       - run: npm ci
+      - run: git config --local -e
       - run: git config --global user.email "AzmoudHossin0101@gmail.com"
       - run: git config --global user.name "Hossin-Azmoud"
       - run: npm run gh-pages
