--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "front-end",
 	"version": "0.0.1",
 	"scripts": {
-		"gh-pages": "npm run build && npx gh-pages -d build",
+		"gh-pages": "npm run build && npx gh-pages -d ../build",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
