--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,56 +2,57 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-  branches: 'main'
+    branches:
+      - main
 
 jobs:
   build_site:
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout
-    uses: actions/checkout@v3
+    runs-on: ubuntu-latest
 
-    # If you're using pnpm, add this step then change the commands and cache key below to use `pnpm`
-    # - name: Install pnpm
-    #   uses: pnpm/action-setup@v2
-    #   with:
-    #     version: 8
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Install Node.js
-    uses: actions/setup-node@v3
-    with:
-      node-version: 18
-      cache: npm
+      - name: Install Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: 14 # You can specify the Node.js version you need.
 
-    - name: Install dependencies
-    run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: build
-    env:
-      BASE_PATH: '/Hossin-Azmoud.github.io'
-    run: |
-      npm run build
-      touch build/.nojekyll
+      - name: Build
+        env:
+          BASE_PATH: '/Hossin-Azmoud.github.io'
+        run: |
+          npm run build
+          touch build/.nojekyll
 
-    - name: Upload Artifacts
-    uses: actions/upload-pages-artifact@v1
-    with:
-      # this should match the `pages` option in your adapter-static options
-      path: 'build/'
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: built-site
+          path: build/
 
   deploy:
-  needs: build_site
-  runs-on: ubuntu-latest
+    needs: build_site
+    runs-on: ubuntu-latest
 
-  permissions:
-    pages: write
-    id-token: write
+    permissions:
+      pages: write
+      id-token: write
 
-  environment:
-    name: github-pages
-    url: ${{ steps.deployment.outputs.page_url }}
-  
-  steps:
-    - name: Deploy
-    id: deployment
-    uses: actions/deploy-pages@v1
+    environment:
+      name: github-pages
+      url: ${{ steps.deploy.outputs.url }}
+
+    steps:
+      - name: Deploy
+        uses: actions/checkout@v2
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
+
