--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
           node-version: 14 # You can specify the Node.js version you need.
 
       - name: Install dependencies
+        run: npm config set legacy-peer-deps true
         run: npm install
 
       - name: Build
