--- a/package.json
+++ b/package.json
@@ -1,40 +1,27 @@
 {
-	"name": "front-end",
-	"version": "0.0.1",
-	"scripts": {
-		"gh-pages": "npm run build && npx gh-pages -d build",
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@fontsource/fira-mono": "^5.0.8",
-		"@neoconfetti/svelte": "^1.0.0",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/adapter-netlify": "^2.0.8",
-		"@sveltejs/adapter-node": "^1.3.1",
-		"@sveltejs/adapter-static": "^2.0.3",
-		"@sveltejs/kit": "^1.23.0",
-		"autoprefixer": "^10.4.15",
-		"eslint": "^8.47.0",
-		"eslint-config-prettier": "^9.0.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"gh-pages": "^6.0.0",
-		"postcss": "^8.4.28",
-		"prettier": "^3.0.2",
-		"prettier-plugin-svelte": "^3.0.3",
-		"svelte": "^4.2.0",
-		"svelte-preprocess": "^5.0.4",
-		"svelte-reveal": "^0.7.0",
-		"tailwindcss": "^3.3.3",
-		"vite": "^4.4.9"
-	},
-	"type": "module",
-	"dependencies": {
-		"@fortawesome/free-brands-svg-icons": "^6.4.2",
-		"@fortawesome/free-solid-svg-icons": "^6.4.2",
-		"svelte-fa": "^3.0.4"
-	}
+  "name": "hossin-azmoud-github-io",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^2.4.2",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "svelte": "^4.0.5",
+    "svelte-fa": "^3.0.4",
+    "tailwindcss": "^3.3.3",
+    "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "svelte-spa-router": "^3.3.0"
+  }
 }
